<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <item android:title="@string/functions">
    <menu android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add"
            android:title="@string/add_item"
            />
        <item
            android:id="@+id/nav_edit"
            android:title="@string/edit_item"
            />
        <item
            android:id="@+id/nav_del"
            android:title="@string/delete_item"
            />
    </menu>
    </item>
    <item android:title="@string/accounts">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/share_list"
                />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"
                />
        </menu>
    </item>
</menu>