<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shopping_product"
        android:textColor="@color/black"
        android:textSize="25sp"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
    <TextView
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:text="@string/item_title"
        />
    <EditText
        android:id="@+id/edit_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ItemNameHint"
        android:layout_weight="1"
        android:ems="10"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:inputType="text"
        android:autofillHints="Food"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/itemQuantity"
            />
        <EditText
            android:id="@+id/edit_item_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/ItemQuantityHint"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:autofillHints="5"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/ItemNotes"
            />
        <EditText
            android:id="@+id/edit_item_notes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/ItemNotesHint"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:inputType="text"
            android:autofillHints="Food"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnCancelItemEntry"
            android:text="@string/cancel"
            android:backgroundTint="@color/red"
            android:layout_marginRight="20dp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginEnd="20dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnConfirmItemEntry"
            android:text="@string/confirm"
            android:backgroundTint="@color/green"
            android:layout_marginLeft="20dp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginStart="20dp" />
    </LinearLayout>

</LinearLayout>