<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/greet"
        android:text="@string/banner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/greet"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/instruct1"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/hint1"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:gravity="center_vertical"
        android:layout_toLeftOf="@+id/editText"
        android:layout_below="@+id/info1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/editText"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/hint1"
        android:textSize="18sp"
        android:textColor="@color/black"

         />

    <TextView
        android:id="@+id/hint2"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:gravity="center_vertical"
        android:layout_below="@+id/hint1"
        android:layout_toLeftOf="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/editText2"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/hint2"
        android:textSize="18sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnlog"
        android:layout_centerHorizontal="true"
        android:text="@string/banner2"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/editText"
        android:layout_width="210dp"
        android:layout_height="42dp"
        android:gravity="center_vertical"
        android:layout_below="@+id/info1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/hint1"
        android:textSize="18sp"
        android:autofillHints=""
        android:inputType="text"
        />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="210dp"
        android:layout_height="42dp"
        android:gravity="center_vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:hint="@string/hint2"
        android:autofillHints="@string/hint2"
        android:inputType="textPassword"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/btnlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:onClick="login"
        android:backgroundTint="@color/blue"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/btnjoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/join"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:backgroundTint="@color/blue"
        android:textColor="@color/black"
        />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnjoin"
        />


</RelativeLayout>